--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 	<artifactId>gson</artifactId>
 	<version>2.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>2.1</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
