--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,11 @@
 	<version>2.5</version>
     </dependency>
     <dependency>
-      <groupId>org.primefaces</groupId>
-      <artifactId>primefaces</artifactId>
-      <version>2.1</version>
-      <type>jar</type>
+        <groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20090211</version>
     </dependency>
+    
   </dependencies>
   <build>
     <plugins>
