--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,10 @@
 /w3c/
 
 ################################# maven
-target/
+target
 .env
+.env.test
 /target-grunt/
-
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
 
 ################################# node
 
