--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "full-stack-web",
+  "name": "testassignment4-BrianKolowitz",
   "version": "1.0.0",
   "dependencies": {
     "grunt-cli": "0.1.13"
@@ -12,6 +12,7 @@
     "grunt-contrib-qunit": "^0.7.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-html-validation": "^0.1.18",
     "grunt-w3c-html-validation": "^0.1.7"
   }
 }
